--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
         <!-- FINISH HEADER ON M-SCREEN-->
 
         <!-- START HEADER ON SM-SCREEN-->
-        <div class="row navbar navbar-expand bg-light  d-flex d-md-none align-items-center">
             <div class="col navbar-nav ">
                 <a class="navbar-brand me-5 my-2" href="javascript:void(0)" title="Trade Me - Life lives here">
                     <img src="./assets/image/trademe-logo-no-tagline.png" class="img-fluid " width="150px">
@@ -215,7 +214,7 @@
         <!--End Navbar-->
 
         <!--FOOTER-->
-        <div class="footer row mt-5 text-center text-md-start">
+        <div class="footer row mt-5 text-center text-md-start d-none">
             <div
                 class="col-12 col-md-12 navbar navbar-expand justify-content-between bg-lightnavbar navbar-expand justify-content-between bg-light">
                 <div class="col-2 col-md-2">
@@ -329,6 +328,44 @@
             </div>
         </div>
 
+        <!--FOOTER SM SCREEN-->
+        <div class="row footer-terms d-md-none ">
+            <div class="col menu-content">
+                <ul class="list-unstyled d-inline-flex">
+                    <li><a href="javascript:void(0)">Desktop site</a></li>
+                    <li><a href="javascript:void(0)">About us</a></li>
+                    <li><a href="javascript:void(0)">Careers</a></li>
+                    <li><a href="javascript:void(0)">Advertisers</a></li>
+                    <li><a href="javascript:void(0)">Privacy policy</a></li>
+                    <li><a href="javascript:void(0)">Terms & conditions</a></li>
+                    <li><a href="javascript:void(0)">Contact us</a></li>
+                </ul>
+            </div>
+            <div class="col-12 bg-light">
+                <div class="row">
+                    <div class="col justify-content-around">
+                        <p>© 2023 Trade Me Limited</p>
+                    </div>
+                    <div class="col">
+                        <a class="navbar-brand ps-4" href="javascript:void(0)" title="Trade Me - Life lives here">
+                            <img src="./assets/image/shielded-logo.png" class="img-fluid" width="50px">
+                        </a>
+                    </div>
+                    <div class="col text-center footer-icons">
+                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+                <div class="col-12 menu-content">
+                    <ul class="list-unstyled d-inline-flex justify-content-start">
+                        <li><a href="javascript:void(0)">Register</a></li>
+                        <li><a href="javascript:void(0)">Log in</a></li>
+                    </ul>
+
+                </div>
+            </div>
+
+        </div>
 
         <!--END FOOTER-->
 
